...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.acme.a3csci3130.DetailViewActivity">
    <EditText
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:id="@+id/address"
        android:hint = "address"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp" />
...
        android:layout_marginTop="8dp"
        android:hint="Province"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/primarybusiness" />

    <Button
        android:id="@+id/updateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="168dp"
        android:onClick="updateContact"
        android:text="Update Data"
...
